# Odisseia

./: .gitignore  CMakeLists.txt  Makefile.txt  README.md  jogados.json
data/: mapa.txt
data/Colocacao/: colocacao.txt
data/Mapas/: Fase_Castelo.txt  Fase_Planicie.txt  Fase_Planicie2Jog.txt  fase1.txt  fase2.txt
data/Save/: arquivoEntidades.json  arquivoFase.json
include/: Ente.hpp  Jogador.hpp  Principal.hpp
include/Animacao/: AnimacaoAndar.hpp  AnimacaoAtaque.hpp  AnimacaoBloco.hpp  AnimacaoContext.hpp  AnimacaoCorrida.hpp  AnimacaoParado.hpp  AnimacaoPular.hpp  AnimacaoStrategy.hpp
include/Entidades/: Entidade.hpp
include/Estados/: Estado.hpp  Jogo.hpp  MaquinaDeEstado.hpp
include/Fase/: Fase.hpp
include/Fases/: Fase.hpp  Fase1.hpp  Fase2.hpp  Fase_Castelo.hpp  Fase_Planicie.hpp
include/Gerenciadores/: GerenciadorDeColisao.hpp  GerenciadorDeEvento.hpp  GerenciadorFisico.hpp  GerenciadorGrafico.hpp  Mediator.hpp  QuadTree.hpp
include/Lista/: Elemento.hpp  Lista.hpp  ListaDeEntidades.hpp
include/Menu/: Menu.hpp  MenuCarregarJogo.hpp  MenuGameOver.hpp  MenuOpcoes.hpp  MenuPausa.hpp  MenuPrincipal.hpp  MenuRanking.hpp
include/Observadores/: ControleFase.hpp  ControleJogador.hpp  ControleMenu.hpp  Observer.hpp  Subject.hpp
src/: Ente.cpp  Jogador.cpp  Principal.cpp  main.cpp
src/Animacao/: AnimacaoAndar.cpp  AnimacaoAtaque.cpp  AnimacaoBloco.cpp  AnimacaoContext.cpp  AnimacaoParado.cpp  AnimacaoPular.cpp  AnimacaoStrategy.cpp
src/Entidades/: Entidade.cpp
src/Estados/: Estado.cpp  Jogo.cpp  MaquinaDeEstado.cpp
src/Fase/: Fase.cpp
src/Fases/: Fase.cpp  Fase1.cpp  Fase2.cpp  Fase_Castelo.cpp  Fase_Planicie.cpp
src/Gerenciadores/: GerenciadorDeColisao.cpp  GerenciadorDeEvento.cpp  GerenciadorFisico.cpp  GerenciadorGrafico.cpp  Mediator.cpp  (+1 more)
(+218 files in other folders)
